tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamedImportInEs5.errors.txt
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(1,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(2,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(4,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(6,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(9,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts(11,8): error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.


==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_0.ts (0 errors) ====
    
    export var a = 10;
    export var x = a;
    export var m = a;
    
==== tests/cases/compiler/es6ImportDefaultBindingFollowedWithNamedImportInEs5_1.ts (6 errors) ====
    import defaultBinding1, { } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    import defaultBinding2, { a } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    var x1: number = a;
    import defaultBinding3, { a as b } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    var x1: number = b;
    import defaultBinding4, { x, a as y } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    var x1: number = x;
    var x1: number = y;
    import defaultBinding5, { x as z,  } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    var x1: number = z;
    import defaultBinding6, { m,  } from "es6ImportDefaultBindingFollowedWithNamedImportInEs5_0";
           ~~~~~~~~~~~~~~~
!!! error TS2467: External module 'es6ImportDefaultBindingFollowedWithNamedImportInEs5_0' has no default export or export assignment.
    var x1: number = m;
    